force-app/main/default/objects/skilljar__Lesson_Progress__c/skilljar__Lesson_Progress__c.object-meta.xml
<CustomObject>
    <label>Lesson Progress</label>
    <nameField>
        <label>Lesson Progress Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lesson Progresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>