force-app/main/default/objects/skilljar__Lesson_Progress__c/fields/skilljar__Completed_At__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Completed_At__c</fullName>
    <label>Completed At</label>
    <type>DateTime</type>
</CustomField>