force-app/main/default/objects/skilljar__Lesson_Progress__c/fields/skilljar__Last_Viewed_At__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Last_Viewed_At__c</fullName>
    <label>Last Viewed At</label>
    <type>DateTime</type>
</CustomField>