force-app/main/default/objects/skilljar__Lesson_Progress__c/fields/skilljar__Lesson__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Lesson__c</fullName>
    <label>Lesson</label>
    <referenceTo>skilljar__Lesson__c</referenceTo>
    <relationshipLabel>Lesson Progresses</relationshipLabel>
    <relationshipName>Lesson_Progresses</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>