force-app/main/default/objects/skilljar__Lesson_Progress__c/fields/skilljar__Score__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Score__c</fullName>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>