force-app/main/default/objects/skilljar__Lesson_Progress__c/fields/skilljar__Student__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Student__c</fullName>
    <label>Student</label>
    <referenceTo>skilljar__Student__c</referenceTo>
    <relationshipLabel>Lesson Progresses</relationshipLabel>
    <relationshipName>Lesson_Progresses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>