force-app/main/default/objects/skilljar__Lesson_Progress__c/fields/skilljar__View_Count__c.field-meta.xml
<CustomField>
    <fullName>skilljar__View_Count__c</fullName>
    <label>View Count</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>